[package]
edition = "2018"
name = "lxc-run"
version = "0.1.0"
authors = [
    "Christian Brauner <christian.brauner@ubuntu.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]

[dependencies]
lxc-sys = { path = "lxc-sys" }
libc = "0.2"
clap = "2.32.0"
xdg = "^2.1"

[build-dependencies]
bindgen = ">0.42.2"
