[package]
edition = "2018"
name = "rlxc"
version = "0.1.0"
authors = [
    "Christian Brauner <christian.brauner@ubuntu.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
build = "build.rs"

[dependencies]
failure = "0.1"
lxc-sys = { path = "lxc-sys" }
libc = "0.2"
clap = "2.33.3"
xdg = "^2.1"
prettytable-rs = "0.8.0"

[build-dependencies]
clap = "2.32"

[profile.dev]
opt-level = 0
debug = true
