[package]
edition = "2018"
name = "lxc-sys"
version = "0.1.0"
authors = [
    "Christian Brauner <christian.brauner@ubuntu.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
license-file = "LICENSE.LGPL2.1"
repository = "https://github.com/brauner/rlxc"
keywords = ["containers", "lxc", "linux"]

[build-dependencies]
bindgen = ">0.42.2"
